Fixed scrollbar issue

--- a/source/css/recipe.css
+++ b/source/css/recipe.css
@@ -1,5 +1,5 @@
 .hero_recipe {
-  width: 100vw;
+  width: 100%;
   margin: 0;
   height: 512px;
   margin-top: 52px;
